--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
 <body>
   <div class="wrap">
     <h1>Misfit Designer — Safe Mode</h1>
-    <p class="hint">Minimal build to bypass crashes. Snap/center defaults on. Re-enable extras later.</p>
+    <p class="hint">Minimal build. Snap/center defaults on.</p>
     <div class="grid">
       <div class="card">
         <label>Upload image (PNG/JPG)</label>
         <input id="file" type="file" accept="image/png,image/jpeg" />
+
         <label>Add text</label>
         <input id="text" type="text" placeholder="Type something…" />
         <div class="row">
@@ -48,11 +49,29 @@
             </select>
           </div>
         </div>
-        <label>Email to send proof</label>
+
+        <label>Choose Shop</label>
+        <select id="shopPreset">
+          <option value="custom" selected>— Custom (enter shop email) —</option>
+          <option value="adpro">AdPro (Local)</option>
+          <option value="roads">Roads Supply</option>
+        </select>
+
+        <label>Shop Email</label>
+        <input id="shopEmail" type="text" placeholder="printshop@example.com" />
+        <p class="hint">Proofs go to this address (PNG + SVG attachments).</p>
+
+        <label>Email to send proof (you)</label>
         <input id="email" type="text" placeholder="you@example.com" />
+
         <button id="send">Send to Print Shop</button>
+        <div class="row" style="margin-top:8px">
+          <button id="dlPng" type="button">Download PNG</button>
+          <button id="dlSvg" type="button">Download SVG</button>
+        </div>
         <p id="status" class="hint"></p>
       </div>
+
       <div class="card">
         <canvas id="c" width="1600" height="1600" aria-label="Design canvas"></canvas>
       </div>
@@ -61,14 +80,12 @@
 
 <script>
 const c = document.getElementById('c');
-const ctx = c.getContext('2d');
+const ctx = c.getContext('2d', {willReadFrequently: false});
 let img = null;
 const state = { text:'', font:'Inter', size:72 };
 
 function draw(){
-  ctx.fillStyle = '#111';
-  ctx.fillRect(0,0,c.width,c.height);
-
+  ctx.fillStyle = '#111'; ctx.fillRect(0,0,c.width,c.height);
   if(img){
     const maxSide = 1500;
     const scale = Math.min(maxSide/img.width, maxSide/img.height, 1);
@@ -78,71 +95,100 @@ function draw(){
     const y = Math.floor((c.height - h)/2);
     ctx.drawImage(img, x, y, w, h);
   }
-
   if(state.text){
     ctx.font = `${state.size}px ${state.font}`;
     ctx.textAlign = 'center';
     ctx.textBaseline = 'middle';
-    ctx.shadowColor = 'rgba(255,255,255,0.35)';
-    ctx.shadowBlur = 10;
+    ctx.shadowColor = 'rgba(255,255,255,0.35)'; ctx.shadowBlur = 10;
     ctx.fillStyle = '#fff';
     ctx.fillText(state.text, c.width/2, c.height*0.85);
     ctx.shadowBlur = 0;
   }
-
   ctx.strokeStyle = 'rgba(255,255,255,0.12)';
+  ctx.lineWidth = 1;
   ctx.beginPath();
-  ctx.moveTo(c.width/2, 0);
-  ctx.lineTo(c.width/2, c.height);
-  ctx.moveTo(0, c.height/2);
-  ctx.lineTo(c.width, c.height/2);
+  ctx.moveTo(c.width/2, 0); ctx.lineTo(c.width/2, c.height);
+  ctx.moveTo(0, c.height/2); ctx.lineTo(c.width, c.height/2);
   ctx.stroke();
 }
+
+function currentPngDataUrl(){ return c.toDataURL('image/png'); }
+function currentSvgBase64(){
+  const png = currentPngDataUrl();
+  const svg = `<svg xmlns='http://www.w3.org/2000/svg' width='${c.width}' height='${c.height}'><image href='${png}' x='0' y='0' width='${c.width}' height='${c.height}'/></svg>`;
+  return btoa(unescape(encodeURIComponent(svg)));
+}
+
 draw();
 
 document.getElementById('file').addEventListener('change', e=>{
-  const f = e.target.files[0];
-  if(!f) return;
+  const f = e.target.files[0]; if(!f) return;
   if(f.size > 12*1024*1024){ alert('Image too large (>12MB).'); return; }
   const reader = new FileReader();
-  reader.onload = ev=>{
-    img = new Image();
-    img.onload = ()=>draw();
-    img.src = ev.target.result;
-  };
+  reader.onload = ev=>{ img = new Image(); img.onload = ()=>draw(); img.src = ev.target.result; };
   reader.readAsDataURL(f);
 });
 document.getElementById('text').addEventListener('input', e=>{ state.text = e.target.value.slice(0,140); draw(); });
 document.getElementById('font').addEventListener('change', e=>{ state.font = e.target.value; draw(); });
 document.getElementById('size').addEventListener('change', e=>{ state.size = parseInt(e.target.value,10)||72; draw(); });
 
+const shopPresetEl = document.getElementById('shopPreset');
+const shopEmailEl  = document.getElementById('shopEmail');
+(function hydrateShopPrefs(){
+  const lastEmail = localStorage.getItem('misfit.shopEmail');
+  const lastPreset = localStorage.getItem('misfit.shopPreset');
+  if (lastEmail) shopEmailEl.value = lastEmail;
+  if (lastPreset) shopPresetEl.value = lastPreset;
+})();
+shopPresetEl.addEventListener('change', () => {
+  let email = '';
+  switch (shopPresetEl.value) {
+    case 'adpro':  email = 'orders@adpromarketing.com'; break; // replace as needed
+    case 'roads':  email = 'print@roadssupply.com'; break;     // replace as needed
+    case 'custom': email = ''; break;
+  }
+  shopEmailEl.value = email;
+  localStorage.setItem('misfit.shopPreset', shopPresetEl.value);
+});
+shopEmailEl.addEventListener('input', () => {
+  localStorage.setItem('misfit.shopEmail', shopEmailEl.value.trim());
+});
+
+document.getElementById('dlPng').addEventListener('click', () => {
+  const a = document.createElement('a');
+  a.href = currentPngDataUrl(); a.download = 'design.png'; a.click();
+});
+document.getElementById('dlSvg').addEventListener('click', () => {
+  const a = document.createElement('a');
+  a.href = 'data:image/svg+xml;base64,' + currentSvgBase64(); a.download = 'design.svg'; a.click();
+});
+
 async function send(){
   const status = document.getElementById('status');
   status.textContent = 'Preparing…';
-  const pngDataUrl = c.toDataURL('image/png');
-  const b64 = pngDataUrl.split(',')[1];
-  const svg = `<svg xmlns='http://www.w3.org/2000/svg' width='${c.width}' height='${c.height}'><image href='${pngDataUrl}' x='0' y='0' width='${c.width}' height='${c.height}'/></svg>`;
-  const svgB64 = btoa(unescape(encodeURIComponent(svg)));
+
   const payload = {
     toEmail: document.getElementById('email').value || '',
-    shopEmail: 'orders@misfitmediahouse.com',
-    meta: { app:'misfit-safe', ts: new Date().toISOString() },
+    shopEmail: shopEmailEl.value.trim() || '',
+    meta: { app:'misfit-safe', ts: new Date().toISOString(), preset: shopPresetEl.value, font: state.font, size: state.size, text: state.text },
     attachments: [
-      { filename:'design.png', content:b64, contentType:'image/png' },
-      { filename:'design.svg', content:svgB64, contentType:'image/svg+xml' }
+      { filename:'design.png', content: currentPngDataUrl().split(',')[1], contentType:'image/png' },
+      { filename:'design.svg', content: currentSvgBase64(), contentType:'image/svg+xml' }
     ]
   };
+
+  if (!payload.shopEmail && !payload.toEmail){
+    status.textContent = 'Add your email or a shop email.'; return;
+  }
+
   try{
     const res = await fetch('/api/send-to-print', {
-      method: 'POST',
-      headers:{'Content-Type':'application/json'},
+      method: 'POST', headers:{'Content-Type':'application/json'},
       body: JSON.stringify(payload)
     });
     const j = await res.json();
     status.textContent = j.ok ? 'Sent! Check your inbox(es).' : ('Error: '+(j.error||res.status));
-  }catch(err){
-    status.textContent = 'Network error.';
-  }
+  }catch{ status.textContent = 'Network error.'; }
 }
 document.getElementById('send').addEventListener('click', send);
 </script>
